[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ve-client"
version = "0.2.0"
description = "VersatileEngine Python client library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPL-3.0"}
authors = [
    {name = "VersatileEngine Contributors"}
]
dependencies = [
    "requests>=2.25.0"
]

[project.optional-dependencies]
msgpack = ["msgpack>=1.0.0"]
ws = ["websockets>=10.0"]

[tool.setuptools.packages.find]
include = ["ve_client*"]
